<resources>
    <string name="app_name">Qual a Nota</string>
    <string name="guest">Convidado</string>
    <string name="owners">Lugares</string>
    <string name="demo">Demo</string>
    <string name="clear">Clear</string>
    <string name="reviews">Avaliações</string>
    <string name="delete_item">Deletar Item</string>
    <string name="description">Descrição</string>
    <string name="location">Localização</string>
    <string name="name">Nome</string>
    <string name="add_new_owner">Adicionar novo lugar</string>
    <string name="review">Avaliação</string>
    <string name="rating">Nota</string>
    <string name="owner">Lugar</string>
    <string name="title">Título</string>
    <string name="description_label">Descrição:</string>
    <string name="location_label">Localização:</string>
    <string name="name_label">Nome:</string>
    <string name="title_label">Título:</string>
    <string name="owner_label">-</string>
    <string name="review_label">Avaliação:</string>
    <string name="add_new_item_desc">Adicionar novo item</string>
    <string name="save_item_desc">Salvar item</string>
    <string name="confirm_delete_action">Deseja mesmo deletar este item?</string>
    <string name="confirm_populate_action">Deseja mesmo cadastrar os dados de demonstração? Todos os dados atuais serão perdidos.</string>
    <string name="confirm_clear_action">Deseja mesmo deletar todos os dados?</string>
    <string name="btn_delete">Deletar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="data_populate_success">Dados de demonstração cadastrados com sucesso.</string>
    <string name="data_clear_success">Todos os dados foram limpados com sucesso.</string>
    <string name="not_set">Não informado</string>
    <string name="empty_review">Sem avaliação</string>
    <string name="saving">S A L V A N D O</string>
    <string name="deleting">D E L E T A N D O</string>
</resources>