<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:theme="@style/Base.Theme.QualANota.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_primary"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/img_launcher_icon"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="32dp"
                android:padding="8dp"
                android:background="@drawable/gradient"
                app:layout_constraintEnd_toStartOf="@+id/listOwnersAction"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:roundPercent="1"
                app:srcCompat="@drawable/koala_profile" />

            <TextView
                android:id="@+id/labelUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/guest"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/img_launcher_icon"
                app:layout_constraintStart_toStartOf="@+id/img_launcher_icon"
                app:layout_constraintTop_toBottomOf="@+id/img_launcher_icon" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/listOwnersAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                app:layout_constraintEnd_toStartOf="@+id/populateDataAction"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/img_launcher_icon"
                app:layout_constraintTop_toTopOf="@+id/img_launcher_icon">

                <ImageView
                    android:id="@+id/imgOwnersIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_store_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/purple_alt"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/labelOwners"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owners"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/imgOwnersIcon"
                    app:layout_constraintStart_toStartOf="@+id/imgOwnersIcon"
                    app:layout_constraintTop_toBottomOf="@+id/imgOwnersIcon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/populateDataAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_launcher_icon">

                <ImageView
                    android:id="@+id/imgPopulateIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_playlist_add_circle_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/purple_alt"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/labelPopulate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/demo"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/imgPopulateIcon"
                    app:layout_constraintStart_toStartOf="@+id/imgPopulateIcon"
                    app:layout_constraintTop_toBottomOf="@+id/imgPopulateIcon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/labelReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/reviews"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_launcher_icon" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="84dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelReviews"
                tools:listitem="@layout/item_review" />

            <you.thiago.koalaloadinglibrary.KoalaLoadingView
                android:id="@+id/loading_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelReviews"
                tools:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNewItemAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/green"
        android:clickable="true"
        android:contentDescription="@string/add_new_item_desc"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>