<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.itemreview.NewItemReviewActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:theme="@style/Base.Theme.QualANota.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_primary"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/owner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTitle" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layoutOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelOwner"
        app:strokeColor="@color/border"
        app:strokeWidth="1dp">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spnOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:spinnerMode="dropdown" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/labelRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionAddOwner" />

    <TextView
        android:id="@+id/labelReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/review"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/star_disabled_1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelReview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:lines="3"
            app:layout_constraintEnd_toEndOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:clickable="true"
        android:contentDescription="@string/save_item_desc"
        android:src="@drawable/baseline_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/actionDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:text="@string/delete_item"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutReview"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/actionAddOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/add_new_owner"
        android:textColor="@color/purple_alt"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutOwner" />

    <ImageView
        android:id="@+id/star_disabled_1"
        style="?attr/actionButtonStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_star_24"
        app:layout_constraintEnd_toStartOf="@+id/star_disabled_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelRating"
        app:tint="@color/rating_disabled"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/star_disabled_2"
        style="?attr/actionButtonStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_star_24"
        app:layout_constraintBottom_toBottomOf="@+id/star_disabled_1"
        app:layout_constraintEnd_toStartOf="@+id/star_disabled_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/star_disabled_1"
        app:layout_constraintTop_toTopOf="@+id/star_disabled_1"
        app:tint="@color/rating_disabled"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/star_disabled_3"
        style="?attr/actionButtonStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_star_24"
        app:layout_constraintBottom_toBottomOf="@+id/star_disabled_2"
        app:layout_constraintEnd_toStartOf="@+id/star_disabled_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/star_disabled_2"
        app:layout_constraintTop_toTopOf="@+id/star_disabled_2"
        app:tint="@color/rating_disabled"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/star_disabled_4"
        style="?attr/actionButtonStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_star_24"
        app:layout_constraintBottom_toBottomOf="@+id/star_disabled_3"
        app:layout_constraintEnd_toStartOf="@+id/star_disabled_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/star_disabled_3"
        app:layout_constraintTop_toTopOf="@+id/star_disabled_3"
        app:tint="@color/rating_disabled"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/star_disabled_5"
        style="?attr/actionButtonStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_star_24"
        app:layout_constraintBottom_toBottomOf="@+id/star_disabled_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/star_disabled_4"
        app:layout_constraintTop_toTopOf="@+id/star_disabled_4"
        app:tint="@color/rating_disabled"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/star_enabled_1"
        style="?attr/actionButtonStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="2dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_star_24"
        app:layout_constraintBottom_toBottomOf="@+id/star_disabled_1"
        app:layout_constraintEnd_toEndOf="@+id/star_disabled_1"
        app:layout_constraintStart_toStartOf="@+id/star_disabled_1"
        app:layout_constraintTop_toTopOf="@+id/star_disabled_1"
        app:tint="@color/rating_enabled"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/star_enabled_2"
        style="?attr/actionButtonStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="2dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_star_24"
        app:layout_constraintBottom_toBottomOf="@+id/star_disabled_2"
        app:layout_constraintEnd_toEndOf="@+id/star_disabled_2"
        app:layout_constraintStart_toStartOf="@+id/star_disabled_2"
        app:layout_constraintTop_toTopOf="@+id/star_disabled_2"
        app:tint="@color/rating_enabled"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/star_enabled_3"
        style="?attr/actionButtonStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="2dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_star_24"
        app:layout_constraintBottom_toBottomOf="@+id/star_disabled_3"
        app:layout_constraintEnd_toEndOf="@+id/star_disabled_3"
        app:layout_constraintStart_toStartOf="@+id/star_disabled_3"
        app:layout_constraintTop_toTopOf="@+id/star_disabled_3"
        app:tint="@color/rating_enabled"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/star_enabled_4"
        style="?attr/actionButtonStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="2dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_star_24"
        app:layout_constraintBottom_toBottomOf="@+id/star_disabled_4"
        app:layout_constraintEnd_toEndOf="@+id/star_disabled_4"
        app:layout_constraintStart_toStartOf="@+id/star_disabled_4"
        app:layout_constraintTop_toTopOf="@+id/star_disabled_4"
        app:tint="@color/rating_enabled"
        tools:ignore="ContentDescription"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/star_enabled_5"
        style="?attr/actionButtonStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="2dp"
        android:clickable="true"
        android:contentDescription="@string/save_item_desc"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_star_24"
        app:layout_constraintBottom_toBottomOf="@+id/star_disabled_5"
        app:layout_constraintEnd_toEndOf="@+id/star_disabled_5"
        app:layout_constraintStart_toStartOf="@+id/star_disabled_5"
        app:layout_constraintTop_toTopOf="@+id/star_disabled_5"
        app:tint="@color/rating_enabled"
        tools:ignore="ContentDescription"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>